Premier: Amazon Hunt II & III
Sleic: Io Moon (not working yet)
       Bike Race (not working yet)
Stargame: Iron Balls
Stern: Dale Jr. (Nascar 5.00)
Valley Spectra IV: good U4 dump for correctly timed bonus countdown
WMS: Demolition Time 0.99 & 1.01 (FreeWPC based rewrite of Demolition Man)
     Rush Pinball (custom MOD, no sound)

Kinda new:
Star Wars 20th Anniversary 1.04
Last Action Hero 1.13 (unofficial MOD)

Clones:
Al's Garage Band Goes On A World Tour R06a
Amazon Hunt (alternate set)
Apollo 13 2.03 & 5.01/Display 4.01
Arena (alternate set)
Black Knight 2000 LA-2 & PA-7
Batman Forever 1.02 & 2.02
Baywatch 3.00 Dutch & 4.00 England & 4.00 Dutch
Black Belt (Bally) Squawk & Talk (revision 7/10/86 and 7/16/86)
Bone Busters (French)
Breakshot 1.2
Chicago Cubs Triple Play (alternate set)
Corvette LX-2 & LA-1
Creature from the Black Lagoon P-3
Cue Ball Wizard rev.2 & rev.3
Cyclone L-1
Diner LU-2
Fire L-2
Fish Tales L-5 & D-6 with wrong text size patch (0x6C6AA changed from 0x25 to 0x14) & LED Ghost Fix
Flash L-2 (yellow flipper ROMs)
Funhouse L-2
Godzilla 0.90 & 1.00
Guns n' Roses 3.00 French
Guns n' Roses 3.00 Dutch
Hyperball L-2
Independence Day 2.01 & French/Display 2.00
Indiana Jones P-2
Indy 500 1.0R
Joust L-1
Jungle Lord L-1 & New Tricks Home ROMs by A.M. Thurnherr
Kiss prototype v.2 (not working yet)
Laser War 8.1
Mars - God of War French
Monopoly 2.51 (Italian display)
Monster Bash 0.5
Monte Carlo (alternate set)
No Fear 1.1X
No Good Gofers 1.2
Party Animal (German)
Phantom of the Opera 2.9
Pinbot P-4 & L-5 mod
Pistol Poker R01
Pool Sharks LA-5
Popeye LA-4 & LX-4
Punchy the Clown R03
Raven (alternate set)
Riverboat Gambler PA-7
Robocop 3.0
Rotation VIII v.1.01 & 1.15
STTNG P-8 & L-3
Secret Service 4.2 (alternate sound)
Soccer Kings (alternate set)
Corrected display rom for South Park 0.90
Space Jam 2.00
Space Shuttle L-3
Spring Break (alternate set)
Star Trek 25th Anniversary 1.17
Starship Troopers 2.00
Still Crazy L-1
Strikes n' Spares rev.2